# wet-mcp

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .release-please-manifest-beta.json  .release-please-manifest.json  .releaserc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  apply_fix.py  docker-compose.yml  fix_path_traversal.py  fix_server.py  fix_test_http_error.py  generate_tests.py  modify_server.py  patch.diff  pyproject.toml  release-please-config-beta.json  release-please-config.json  renovate.json  repro_issue.py  test_bg.py  test_patch.diff  test_path_traversal.py
.agent/rules/: project-context.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  best_practices.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/instructions/: project-context.instructions.md
.github/rulesets/: development.json  production.json
.github/scripts/: check-ci-cd-status.sh  cleanup-release-prs.sh  merge-with-auto-resolve.sh
.github/workflows/: cd.yml  ci.yml
.jules/: bolt.md  sentinel.md
docs/: HANDBOOK.md
scripts/: clean-venv.mjs  enforce-commit.sh
src/wet_mcp/: __init__.py  __main__.py  cache.py  config.py  db.py  docker_manager.py  embedder.py  llm.py  reranker.py  run_searxng.py  searxng_runner.py  searxng_runner.py.new  searxng_settings.yml  searxng_wrapper.py  security.py  server.py  setup.py  sync.py
src/wet_mcp/docs/: __init__.py  config.md  extract.md  help.md  media.md  search.md  web.md
src/wet_mcp/sources/: __init__.py  crawler.py  docs.py  searxng.py
tests/: COMPARISON_REPORT.md  _debug_search.py  _existing_libs.txt  benchmark_cases_cc_dp.py  benchmark_cases_dq_ez.py  benchmark_cases_fa_gj.py  benchmark_docs_search.py  benchmark_download.py  compare_results.jsonl  compare_tools.py  conftest.py  run_benchmark.py  test_api_keys_security.py  test_cache.py  test_config.py  test_config_gpu.py  test_crawler_comprehensive.py  test_crawler_download.py  test_crawler_download_stream.py  test_crawler_extended.py  test_crawler_extract.py  test_crawler_media.py  test_crawler_sitemap.py  test_crawler_unit.py  test_db.py  test_docs.py  test_docs_comprehensive.py  test_download_media_streaming.py  test_embedder.py  test_exploit_arbitrary_write.py  test_hard_integration.py  test_help_tool.py  test_integration.py  test_llm.py  test_llm_encoding.py  test_local.py  test_main.py  test_media_tool.py  test_reranker.py  test_run_searxng_wrapper.py  (+33 more)
