[project]
name = "wet-mcp"
version = "3.1.0-beta.1"
description = "Open-source MCP Server for web search, extract, and crawl with embedded SearXNG"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "n24q02m", email = "quangminh2422004@gmail.com" }]
keywords = ["mcp", "web-scraping", "searxng", "crawl4ai", "tavily-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.13.*"
dependencies = [
    # MCP Server
    "mcp[cli]",
    # Web Crawling
    "crawl4ai",
    # HTTP Client
    "httpx",
    # Config
    "pydantic",
    "pydantic-settings",
    # Logging
    "loguru",
    # LLM
    "litellm",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
    "pre-commit",
]

[project.scripts]
wet-mcp = "wet_mcp:main"

[project.urls]
Homepage = "https://github.com/n24q02m/wet-mcp"
Repository = "https://github.com/n24q02m/wet-mcp.git"
Issues = "https://github.com/n24q02m/wet-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wet_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/wet_mcp/**/*.py",
    "src/wet_mcp/**/*.yml",
    "src/wet_mcp/**/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty]
rules = { unresolved-import = "ignore", unresolved-attribute = "ignore", possibly-missing-attribute = "ignore" }

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
